--- a/clicks-example/package.json
+++ b/clicks-example/package.json
@@ -13,10 +13,10 @@
     "build": "graphpack build"
   },
   "dependencies": {
-    "bs-platform": "^4.0.7",
+    "bs-platform": "^5.0.6",
     "graphpack": "^1.0.2",
-    "graphql-to-reason": "^0.4.0",
-    "graphql-tools": "^4.0.3",
-    "graphql": "^0.13.2"
+    "graphql": "^14.5.7",
+    "graphql-to-reason": "^1.0.0-alpha.0",
+    "graphql-tools": "^4.0.3"
   }
 }
